Adding ImGui in the renderer

--- a/heavy_light_transport/core/BUILD
+++ b/heavy_light_transport/core/BUILD
@@ -2,7 +2,8 @@ cc_library(
     name = "core",
     deps = [
         "//heavy_light_transport/core/window",
-        # "//heavy_light_transport/core/imgui",
+        "//heavy_light_transport/core/imgui",
+        "//heavy_light_transport/core/imgui:docking",
     ],
     visibility = ["//heavy_light_transport:__subpackages__"],
 )
